* Fixed front page bubble and hero logo container layout issues

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/base/vars.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/base/vars.scss
@@ -50,7 +50,7 @@ $logo-text-pad-size: 4.5rem;
 $logo-text-desktop-size: 5.375rem;
 
 // Bubble - Used only in the branded front page
-$bubble-size-small: 16.25rem;
+$bubble-size-small: 16rem;
 $bubble-size-normal: 18.25rem;
 $bubble-font: 'Exo 2', Arial, sans-serif;
 
